--- a/server/djangoapp/templates/djangoapp/index1.html
+++ b/server/djangoapp/templates/djangoapp/index1.html
@@ -12,6 +12,8 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Dealership Review</a>
+                <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About us</a>
+                <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact us</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
@@ -35,7 +37,40 @@
             </ul>
         </div>
     </nav>
+<!--Add a dealer table here -->
+<div class="container-fluid">
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-warning" role="alert">{{ message }}</div>
+        {% endfor %}
+    {% endif %}
 
+    <table class="table" id="table"
+        data-filter-control="true">
+        <thead>
+            <tr>
+                <th data-field="id">ID</th>
+                
+                <th data-field="city">City</th>
+                <th data-field="address">Address</th>
+                <th data-field="zip">Zip</th>
+                <th data-field="state" data-filter-control="select">State</th>
+            </tr>
+        </thead>
+         <tbody>
+            {% for dealer in dealership_list %}
+                <tr>
+                    
+                    <td>{{dealer.dealer_id}}</td>
+                    <td>{{dealer.city}}</td>
+                    <td>{{dealer.address}}</td>
+                    <td>{{dealer.zip}}</td>
+                    <td>{{dealer.st}}</td>
+                </tr>
+            {% endfor %}
+         </tbody>
+    </table>
+    </div>
 
 
 </body>
