--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -12,6 +12,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Dealership Review - Contact us</a>
+                    <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
                 </div>
             </div>
         </nav>
