--- a/server/djangoapp/templates/djangoapp/index1new.html
+++ b/server/djangoapp/templates/djangoapp/index1new.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,9 +12,11 @@
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
 
-<!-- Navigation bar -->
+    <body>
+   
+    <!--Add a nav bar here -->
+
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -44,47 +46,44 @@
             </ul>
         </div>
     </nav>
-<!--Add a dealer table here -->
-<div class="container-fluid">
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-warning" role="alert">{{ message }}</div>
-        {% endfor %}
-    {% endif %}
-
-    <table class="table" id="table" data-filter-control="true">
-        <thead>
-            <tr>
-                <th data-field="id">ID</th>
-                <th data-field="dealer name">Dealer Name</th>
-                <th data-field="city">City</th>
-                <th data-field="address">Address</th>
-                <th data-field="zip">Zip</th>
-                <th data-field="state" data-filter-control="select">State</th>
-                <!--<th data-field="state">State</th> -->
-            </tr>
-        </thead>
-         <tbody>
-            {% for dealer in dealership_list %}
+    
+        <!--Add a dealer table here -->
+        <h3 class='mt-2 mb-4'>Dealerships</h3>
+        <table class= "table" id="table"data-filter-control="true" >
+            <thead>
                 <tr>
-                    
-                    <td>{{dealer.dealer_id}}</td>
-                    <td><a href="{% url 'djangoapp:dealer_details' dealer.dealer_id %}">{{dealer.full_name}}</a></td>
-                    <td>{{dealer.city}}</td>
-                    <td>{{dealer.address}}</td>
-                    <td>{{dealer.zip}}</td>
-                    <td>{{dealer.st}}</td>
+                    <th data-field="id">ID</th>
+                    <th data-field="full_name">Dealer Name</th>
+                    <th data-field="address">Address</th>
+                    <th data-field="city">City</th>
+                    <th data-field="zip">Zip</th>
+                    <th data-field="state" data-filter-control="select">State</th>
                 </tr>
-            {% endfor %}
-         </tbody>
-    </table>
-    </div>
+            </thead>
+            <tbody>
+                {% for dealer in dealerships_list %}
+                <tr>
+                    <td>{{dealer.id}}</td>
+                    <td><a href="{% url 'djangoapp:dealer_details' dealer.dealer_id %}">{{dealer.full_name}}</a></td>
+                    <td>{{dealer.address}}</td>
+                    <td>{{dealer.city}}</td>
+                    <td>{{dealer.st}}</td>
+                    <td>{{dealer.zip}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
 
-</body>
-<script>
-  $(function() {
-    $('#table').bootstrapTable()
-  })
-</script>
+        <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
+    
+    </body>
+
+    <script>
+        $(function() {
+            $('#table').bootstrapTable()
+        })
+    </script>
+
 </html>
